--- a/DQD/Pages/VideoPage.xaml
+++ b/DQD/Pages/VideoPage.xaml
@@ -5,6 +5,8 @@
     xmlns:local="using:DQD.Net.Pages"
     xmlns:model="using:DQD.Core.Models"
     xmlns:MPV="using:DQD.Core.Controls"
+    xmlns:Shadow="using:DQD.Shadow"
+    xmlns:xp="using:XP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -106,5 +108,108 @@
                 </DataTemplate>
             </Pivot.ItemTemplate>
         </Pivot>
+
+        <!--#region FloatButton-->
+        <StackPanel Name="ButtonStack" 
+              Width="150" 
+              Height=" 200"
+              HorizontalAlignment="Right"
+              VerticalAlignment="Bottom"
+                    Orientation="Vertical"
+              FlowDirection="RightToLeft">
+            <Shadow:Shadow 
+                Margin="0"
+                CornerRadius="0.5"
+                Z_Depth="4">
+                <xp:XPButton  
+                    Name="RefreshBtn"
+                    Width="55"
+                    Height="55"
+                    Background="{ThemeResource DQDBackground2}"
+                    BorderThickness="0"
+                    CornerRadius="28"
+                    Foreground="White"
+                    IconForeground="White"
+                    IconPosition="OnlyIcon"
+                    IconSize="23"
+                    PointerOverBackground="{ThemeResource DQDBackground3}"
+                    PressedBackground="{ThemeResource DQDBackground3}"
+                    Click="RefreshBtn_Click">
+                    <xp:XPButton.Icon>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE117;"/>
+                    </xp:XPButton.Icon>
+                </xp:XPButton>
+            </Shadow:Shadow>
+            <Shadow:Shadow 
+                CornerRadius="0.5"
+                Z_Depth="4">
+                <xp:XPButton  
+                    Name="BackToTopBtn"
+                    Width="55"
+                    Height="55"
+                    Background="Orange"
+                    BorderThickness="0"
+                    CornerRadius="28"
+                    Foreground="White"
+                    IconForeground="White"
+                    IconPosition="OnlyIcon"
+                    IconSize="23"
+                    PointerOverBackground="DarkOrange"
+                    PressedBackground="DarkOrange"
+                    Click="BackToTopBtn_Click">
+                    <xp:XPButton.Icon>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE11C;"/>
+                    </xp:XPButton.Icon>
+                </xp:XPButton>
+            </Shadow:Shadow>
+        </StackPanel>
+
+        <StackPanel Name="ButtonStackNoShadow" 
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Orientation="Vertical"
+                    FlowDirection="RightToLeft"
+                    Margin=" 0,0,25,20"
+                    Visibility="Collapsed">
+            <xp:XPButton  
+                    Name="RefreshBtnNoSHdow"
+                    Width="55"
+                    Height="55"
+                    Background="{ThemeResource DQDBackground2}"
+                    BorderThickness="0"
+                    CornerRadius="28"
+                    Foreground="White"
+                    IconForeground="White"
+                    IconPosition="OnlyIcon"
+                    IconSize="23"
+                    PointerOverBackground="{ThemeResource DQDBackground3}"
+                    PressedBackground="{ThemeResource DQDBackground3}"
+                    Click="RefreshBtn_Click">
+                <xp:XPButton.Icon>
+                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE117;"/>
+                </xp:XPButton.Icon>
+            </xp:XPButton>
+            <xp:XPButton  
+                Name="BackToTopBtnNoShadow"
+                Width="55"
+                Height="55"
+                Background="Orange"
+                BorderThickness="0"
+                CornerRadius="28"
+                Foreground="White"
+                IconForeground="White"
+                IconPosition="OnlyIcon"
+                IconSize="23"
+                PointerOverBackground="DarkOrange"
+                PressedBackground="DarkOrange"
+                Click="BackToTopBtn_Click"
+                Margin="0,50,0,0">
+                <xp:XPButton.Icon>
+                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE11C;"/>
+                </xp:XPButton.Icon>
+            </xp:XPButton>
+        </StackPanel>
+        <!--#endregion-->
+        
     </Grid>
 </Page>
