--- a/DQD/Pages/HomePage.xaml
+++ b/DQD/Pages/HomePage.xaml
@@ -12,6 +12,7 @@
     mc:Ignorable="d">
 
     <Page.Resources>
+        <CollectionViewSource x:Name="FlipResouces"/>
         <CollectionViewSource x:Name="ListResources"/>
         <CollectionViewSource x:Name="HeaderResources"/>
     </Page.Resources>
@@ -48,71 +49,99 @@
         </VisualStateManager.VisualStateGroups>
         <!--#endregion-->
 
-        <!--#region ContentPivot-->
-        <Pivot Name="MyPivot" 
-                           Width="{Binding Width, ElementName=grid ,Mode=OneWay}"
-                           ItemsSource="{Binding Source={StaticResource HeaderResources}}"
-                           SelectionChanged="MyPivot_SelectionChanged">
-            <Pivot.HeaderTemplate>
-                <DataTemplate x:DataType="model:HeaderModel">
-                    <TextBlock Text="{Binding Title}"
+        <RelativePanel>
+            <FlipView Name="MyFlip"
+                      Margin="0,0,0,0"
+                      Height="240"
+                      Style="{ThemeResource SpecialFlipStyle}"
+                      ItemsSource="{Binding Source={StaticResource FlipResouces}}">
+                <FlipView.ItemTemplate>
+                    <DataTemplate x:DataType="model:ContentListModel">
+                        <Grid >
+                            <Image Source="{Binding Image}"
+                                   Height=" 240"
+                                   Stretch="UniformToFill"/>
+                            <Border Background="#70202020"
+                                    VerticalAlignment="Bottom">
+                                <TextBlock Text="{Binding Title}" 
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Left"
+                                           Foreground="#EFEFEF"
+                                           Margin="5"/>
+                            </Border>
+                        </Grid>
+                    </DataTemplate>
+                </FlipView.ItemTemplate>
+            </FlipView>
+
+            <!--#region ContentPivot-->
+            <Pivot Name="MyPivot" 
+                   Margin="0,0,0,0"
+                   RelativePanel.Below="MyFlip"
+                   Width="{Binding Width, ElementName=grid ,Mode=OneWay}"
+                   ItemsSource="{Binding Source={StaticResource HeaderResources}}"
+                   SelectionChanged="MyPivot_SelectionChanged">
+                <Pivot.HeaderTemplate>
+                    <DataTemplate x:DataType="model:HeaderModel">
+                        <TextBlock Text="{Binding Title}"
                                Margin="0,0,0,5" 
                                TextAlignment="Center" 
                                FontSize="16"
                                Width="55"
                                Foreground="{ThemeResource AppPersonalTextColorPure02}"/>
-                </DataTemplate>
-            </Pivot.HeaderTemplate>
-            <Pivot.ItemTemplate>
-                <DataTemplate x:DataType="model:HeaderModel" >
-                    <ListView Name="ContentListView" 
+                    </DataTemplate>
+                </Pivot.HeaderTemplate>
+                <Pivot.ItemTemplate>
+                    <DataTemplate x:DataType="model:HeaderModel" >
+                        <ListView Name="ContentListView" 
                               ItemsSource="{Binding Source={StaticResource ListResources}}"
                               ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
                               SelectionMode="None" 
                               IsItemClickEnabled="True"
                               ItemClick="ListView_ItemClick"
                               Loaded="LocalPageListView_Loaded">
-                        <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="model:ContentListModel">
-                                <Grid HorizontalAlignment="Stretch">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*"/>
-                                        <ColumnDefinition Width="5*"/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="2*"/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-                                    <TextBlock Text="{Binding Title}" 
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="model:ContentListModel">
+                                    <Grid HorizontalAlignment="Stretch">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="2*"/>
+                                            <ColumnDefinition Width="5*"/>
+                                            <ColumnDefinition/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="2*"/>
+                                            <RowDefinition/>
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Text="{Binding Title}" 
                                                Grid.Row="0" 
                                                Grid.Column="1"
                                                Margin="3"
                                                TextWrapping="WrapWholeWords"/>
-                                    <TextBlock Text="{Binding Date}" 
+                                        <TextBlock Text="{Binding Date}" 
                                                Grid.Row="1" 
                                                Grid.Column="1"
                                                Margin="3"
                                                FontSize="14"
                                                Foreground="{ThemeResource DQDSummTextColor}"/>
-                                    <Image Source="{Binding Image}" 
+                                        <Image Source="{Binding Image}" 
                                                Grid.Column="0"
                                                Grid.RowSpan="2" 
                                                Margin="2"/>
-                                    <Button Content="{Binding ShareNum}" 
+                                        <Button Content="{Binding ShareNum}" 
                                             Grid.RowSpan="2" 
                                             Grid.ColumnSpan="3"
                                             Background="Transparent"
                                             HorizontalAlignment="Right"
                                             Foreground="{ThemeResource DQDBackground}"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </DataTemplate>
-            </Pivot.ItemTemplate>
-        </Pivot>
-        <!--#endregion-->
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </DataTemplate>
+                </Pivot.ItemTemplate>
+            </Pivot>
+            <!--#endregion-->
+        </RelativePanel>
 
         <!--#region FloatButton-->
         <StackPanel Name="ButtonStack" 
